[tool.poetry]
name = "a2d"
version = "2.0.3"
description = "APRS to DAPNET portal"
keywords = ["hamradio"]
license = "MIT, CC-BY-3.0"
homepage = "https://github.com/NGC2023/a2d"
repository = "https://github.com/NGC2023/a2d.git"
authors = ["Yogeswaran Umasankar <kd8mbd@gmail.com>"]
maintainers = ["Yogeswaran Umasankar <kd8mbd@gmail.com>"]
readme = "docs/README.md"
packages = [
    {include = "a2d"}
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
