[tool.poetry]
name = "a2d"
version = "2.0.5"
description = "APRS to DAPNET portal"
keywords = ["hamradio"]
license = "MIT, CC-BY-3.0"
homepage = "https://github.com/NGC2023/a2d"
repository = "https://github.com/NGC2023/a2d.git"
authors = ["NGC2023 <kd8mbd@gmail.com>"]
maintainers = ["NGC2023 <kd8mbd@gmail.com>"]
packages = [
    {include = "a2d"}
]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "*"
requests = "*"
flask = "*"
gunicorn = "*"
psutil = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-flask = "*"
psutil = "*"
mkdocs = "*"
mkdocs-bootstrap = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
